--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>Home</title>
+  <title>Progressive Exam</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
@@ -29,8 +29,8 @@
     }
   </style>
   <style>
-  pre .latex {  }
-</style>
+    pre .latex {  }
+  </style>
 </head>
 <body>
   <section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background" id="header1-0" data-rv-view="0" style="background-image: url(assets/images/jumbotron.jpg);">
@@ -56,81 +56,81 @@
 
     <div class="mbr-arrow mbr-arrow-floating" aria-hidden="true"><a href="#header3-2"><i class="mbr-arrow-icon"></i></a></div>
 
-</section>
+  </section>
 
-<section class="engine"><a href="https://mobirise.ws/l">html web builder</a></section><section class="mbr-section mbr-section__container article" id="header3-2" data-rv-view="6" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2">Introduction</h3>
+  <section class="engine"><a href="https://mobirise.ws/l">html web builder</a></section><section class="mbr-section mbr-section__container article" id="header3-2" data-rv-view="6" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+      <div class="container">
+          <div class="row">
+              <div class="col-xs-12">
+                  <h3 class="mbr-section-title display-2">Introduction</h3>
 
-            </div>
-        </div>
-    </div>
-</section>
+              </div>
+          </div>
+      </div>
+  </section>
 <!-- Introduction -->
-<section class="mbr-cards mbr-section mbr-section-nopadding" id="features1-1" data-rv-view="3" style="background-color: rgb(255, 255, 255);">
+  <section class="mbr-cards mbr-section mbr-section-nopadding" id="features1-1" data-rv-view="3" style="background-color: rgb(255, 255, 255);">
 
 
 
-    <div class="mbr-cards-row row striped">
+      <div class="mbr-cards-row row striped">
 
-        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
-            <div class="container">
-                <div class="card cart-block">
-                    <div class="card-img"><a href="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://coursera.s3.amazonaws.com/topics/ml/large-icon.png"><img src="assets/images/large-icon-460x259.png" class="card-img-top"></a></div>
-                    <div class="card-block">
-                        <h4 class="card-title">Machine Learning</h4>
-                        <h5 class="card-subtitle"></h5>
-                        <p class="card-text">Machince learning learn from and make predictions on data</p>
+          <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
+              <div class="container">
+                  <div class="card cart-block">
+                      <div class="card-img"><a href="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://coursera.s3.amazonaws.com/topics/ml/large-icon.png"><img src="assets/images/large-icon-460x259.png" class="card-img-top"></a></div>
+                      <div class="card-block">
+                          <h4 class="card-title">Machine Learning</h4>
+                          <h5 class="card-subtitle"></h5>
+                          <p class="card-text">Machince learning learn from and make predictions on data</p>
 
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
-            <div class="container">
-                <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/dr-600x367.png" class="card-img-top"></div>
-                    <div class="card-block">
-                        <h4 class="card-title">Elasticity</h4>
-                        <h5 class="card-subtitle"></h5>
-                        <p class="card-text">Elasticity demand and price play role in demand response</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
+              <div class="container">
+                  <div class="card cart-block">
+                      <div class="card-img"><img src="assets/images/dr-600x367.png" class="card-img-top"></div>
+                      <div class="card-block">
+                          <h4 class="card-title">Elasticity</h4>
+                          <h5 class="card-subtitle"></h5>
+                          <p class="card-text">Elasticity demand and price play role in demand response</p>
 
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
-            <div class="container">
-                <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/vre-1-600x622.png" class="card-img-top"></div>
-                    <div class="card-block">
-                        <h4 class="card-title">VRE</h4>
-                        <h5 class="card-subtitle"></h5>
-                        <p class="card-text">Variable renewable energy resource is non-dispatchable due to it fluctuation nature</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
+              <div class="container">
+                  <div class="card cart-block">
+                      <div class="card-img"><img src="assets/images/vre-1-600x622.png" class="card-img-top"></div>
+                      <div class="card-block">
+                          <h4 class="card-title">VRE</h4>
+                          <h5 class="card-subtitle"></h5>
+                          <p class="card-text">Variable renewable energy resource is non-dispatchable due to it fluctuation nature</p>
 
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
-            <div class="container">
-                <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/co2-600x598.png" class="card-img-top"></div>
-                    <div class="card-block">
-                        <h4 class="card-title">Environmental concern</h4>
-                        <h5 class="card-subtitle"></h5>
-                        <p class="card-text">There is environmental cost to fossil fuel</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
+              <div class="container">
+                  <div class="card cart-block">
+                      <div class="card-img"><img src="assets/images/co2-600x598.png" class="card-img-top"></div>
+                      <div class="card-block">
+                          <h4 class="card-title">Environmental concern</h4>
+                          <h5 class="card-subtitle"></h5>
+                          <p class="card-text">There is environmental cost to fossil fuel</p>
 
-                    </div>
-                </div>
-            </div>
-        </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
 
 
-    </div>
-</section>
+      </div>
+  </section>
 <!-- Conceptual research framework -->
 <section class="mbr-section mbr-section__container article" id="header3-c" data-rv-view="193" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
@@ -553,12 +553,10 @@
 </section>
 <!-- Insert plotly of 5bus PJM HBF-BF -->
 
-<section class="mbr-section article mbr-section__container" id="content1-l" data-rv-view="245" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-  <div>
+<div>
       <a href="https://plot.ly/~chaweewatp/127/?share_key=WcmgdMhP8HSXuZxsQGfhTt" target="_blank" title="PJM-5bus-network" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/127.png?share_key=WcmgdMhP8HSXuZxsQGfhTt" alt="PJM-5bus-network" style="max-width: 100%;width: 100px;"  width="100" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
       <script data-plotly="chaweewatp:127" sharekey-plotly="WcmgdMhP8HSXuZxsQGfhTt" src="https://plot.ly/embed.js" async></script>
-  </div>
-</section>
+</div>
 
 <section class="mbr-section article mbr-section__container" id="content1-l" data-rv-view="245" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
@@ -752,11 +750,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
 </section>
 <!-- Insert plotly of 118bus HBF-BF -->
 <div>
@@ -773,7 +766,7 @@
               <p>MAE ($/MWhr)</p>
               <div lang="latex" class="container text-xs-center">MAE=\frac{1}{N}\sum_{i=1}^{N}|p_{i}-\hat{p}_{i}|</div>
               <div lang="latex" class="container text-xs-center">MAPE=\frac{100}{N}\sum_{i=1}^{N}|\frac{p_{i}-\hat{p}_{i}}{p_{i}}|</div>
-              where; <span lang="latex">p_{i}</span> and <span lang="latex">\hat{p}_{i}</span> are LMP values from prue brute force and combine heuristic-brute force. <span lang="latex">N</span> is number of LMP vlues from any quantile in every bus.
+              <p>where; <span lang="latex">p_{i}</span> and <span lang="latex">\hat{p}_{i}</span> are LMP values from prue brute force and combine heuristic-brute force. <span lang="latex">N</span> is number of LMP vlues from any quantile in every bus.</p>
 
               <table style="width:100%">
                 <tr>
@@ -819,7 +812,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-h" data-rv-view="229" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-h" data-rv-view="56" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -829,7 +822,7 @@
 
 </section>
 
-<section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider3-n" data-rv-view="249" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider3-n" data-rv-view="58" style="background-color: rgb(255, 255, 255);">
     <div class=" container boxed-slider" style="padding-top: 40px; padding-bottom: 40px;">
         <div>
             <div>
@@ -911,32 +904,17 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-p" data-rv-view="263" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-p" data-rv-view="73" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
-  <div class="container">
-      <div class="row">
-          <div class="col-xs-12 lead"><p>This LMP sensitivity will be sent to retailer to engage with price based demand response. (Future work)</p></div>
-      </div>
-  </div>
-
-</section>
-<section class="mbr-section mbr-section__container article" id="header3-7" data-rv-view="97" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
-            <div class="col-xs-12">
-              <h3 class="mbr-section-title display-2">Summary</h3>
-              <ul>1</ul>
-              <ul>2</ul>
-              <ul>3</ul>
-
-            </div>
-
+            <div class="col-xs-12 lead"><p>LMP announcement (table)</p></div>
         </div>
     </div>
+
 </section>
 
-
-<section class="mbr-section mbr-parallax-background" id="testimonials3-i" data-rv-view="231" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="testimonials3-i" data-rv-view="75" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -960,7 +938,7 @@
                 <div class="col-xs-12 col-lg-4">
 
                     <div class="mbr-testimonial card">
-                        <div class="card-block"><p>Forecasting in VRE</p></div>
+                        <div class="card-block"><p>Forecasting in Generation</p></div>
                         <div class="mbr-author card-footer">
 
 
@@ -997,7 +975,7 @@
 
 </section>
 
-<!-- <section class="mbr-section article mbr-section__container" id="content1-j" data-rv-view="241" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-j" data-rv-view="85" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -1005,25 +983,25 @@
         </div>
     </div>
 
-</section>-->
+</section>
 
-<section class="mbr-section article mbr-parallax-background" id="msg-box8-t" data-rv-view="299" style="background-image: url(assets/images/desert.jpg); padding-top: 300px; padding-bottom: 300px;">
+<section class="mbr-section article mbr-parallax-background" id="msg-box8-t" data-rv-view="87" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">Thank you</h3>
-                <div class="lead"><p>Suggestion and question</p></div>
+                <h3 class="mbr-section-title display-2">Temp</h3>
+                <div class="lead"><p>Article header with background image and parallax effect.</p></div>
 
             </div>
         </div>
     </div>
 
 </section>
-<!--
-<section class="mbr-section mbr-section__container article" id="header3-r" data-rv-view="295" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+<section class="mbr-section mbr-section__container article" id="header3-r" data-rv-view="90" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -1034,7 +1012,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content6-s" data-rv-view="297" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content6-s" data-rv-view="92" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -1045,7 +1023,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-o" data-rv-view="261" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-o" data-rv-view="94" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -1053,12 +1031,12 @@
         </div>
     </div>
 
-</section> -->
+</section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-q" data-rv-view="293" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-q" data-rv-view="96" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
 
     <div class="container text-xs-center">
-        <p>Copy Right@2018, Pornchai Chaweewat</p>
+        <p>ss</p>
     </div>
 </footer>
 
