--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-
+  <style>
+    table, th, td {
+        border: 1px solid black;
+    }
+    th, td {
+      padding: 5px;
+    }
+    th {
+        text-align: center;
+    }
+  </style>
+  <style>
+    pre .latex {  }
+  </style>
 
 
 </head>
@@ -46,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/i">build your own website</a></section><section class="mbr-section mbr-section__container article" id="header3-2" data-rv-view="3" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="mbr-section mbr-section__container article" id="header3-2" data-rv-view="3" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -268,7 +281,7 @@
 </section>
 
 <section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider3-a" data-rv-view="34" style="background-color: rgb(255, 255, 255);">
-    <div class=" container boxed-slider" style="padding-top: 120px; padding-bottom: 120px;">
+    <div class=" container boxed-slider" style="padding-top: 40px; padding-bottom: 40px;">
         <div>
             <div>
 
@@ -318,6 +331,21 @@
                                 </div>
                             </div>
                         </div>
+                    </div><div class="mbr-section mbr-section-hero carousel-item dark center" data-bg-video-slide="false">
+                        <div class="mbr-table-cell">
+
+                            <div class="container-slide">
+                                <img src="assets/images/pesudo-code-1600x900.png">
+                                <div class="row">
+                                    <div class="col-md-8 col-md-offset-3 text-xs-right">
+
+
+
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -332,6 +360,45 @@
             </div>
         </div>
     </div>
+</section>
+
+<section class="mbr-section mbr-section__container article" id="header3-u" data-rv-view="98" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">Proposed method (cont')</h3>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section article mbr-section__container" id="content1-v" data-rv-view="100" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead">
+              <p>I. ACOPF</p><p><br></p>
+              <p>In transmission system can be fomulted as minimize:</p>
+              <div  lang="latex" class="container text-xs-center"> \sum_{i=1}^{N} (C_{G_{i}} \times P_{G_{i}} </div>
+              <p>Subject to:</p>
+              <div lang="latex" class="container text-xs-center"> P_{G_{i}} - P_{L_{i}} - P(V,\theta) = 0 </div>
+              <div lang="latex" class="container text-xs-center"> Q_{Gi}-Q_{Li}-Q(V,\theta)=0 </div>
+              <div lang="latex" class="container text-xs-center"> |F_{k}|=F_{k}^{max} </div>
+              <div lang="latex" class="container text-xs-center"> P_{Gi}^{min} \leq P_{Gi} \leq P_{Gi}^{max} </div>
+              <div lang="latex" class="container text-xs-center"> Q_{Gi}^{min} \leq Q_{Gi} \leq Q_{Gi}^{max} </div>
+              <div lang="latex" class="container text-xs-center"> V_{i}^{min} \leq V_{i} \leq V_{i}^{max} </div>
+              <p>where:</p>
+              <p><span lang="latex">C_{Gi}</span> is generation cost of generator <span lang="latex">G_i</span> ($/MWhr). <span lang="latex">P_{Gi}</span> and <span lang="latex">Q_{Gi}</span> are real and reactive power output of generator <span lang="latex">G_{i}</span> (MW, MVar). <span lang="latex">P_{Gi}^{min}</span> and <span lang="latex">P_{Gi}^{max}</span> are minimum and maximum limit of <span lang="latex"> P_{Gi} </span>. <span lang="latex">Q_{Gi}^{min}</span> and <span lang="latex">Q_{Gi}^{max}</span> are minimum and maximum limit of <span lang="latex"> Q_{Gi} </span>. <span lang="latex">P_{Li}</span> and <span lang="latex">Q_{Li}</span> are real and reactive power demand of load <span lang="latex">L_{i}</span> (MW, MVar). <span lang="latex">F_{k}</span> and <span lang="latex">F_{k}^{max}</span> are line flow and its maximum limit at bus i. <span lang="latex">V_{i}^{min}</span> and <span lang="latex">V_{i}^{max}</span> are minimum and maximum voltage limit at bus i.</p>
+              <p>II. LMP Calculation</p><p><br></p>
+              <p>The LMP at bus i can be written as follows:</p>
+              <div lang="latex" class="container text-xs-center">LMP_{i}=LMP^{energy}+LMP_{i}^{congestion}+LMP_{i}^{loss}</div>
+              <p>The LMP at any bus also be calculated in:</p>
+              <div lang="latex" class="container text-xs-center"> LMP_{i}=\sum_{j=1}^{N} (C^{T} + \frac{\partial G_{j}}{\partial D_{j}}) </div>
+            </div>
+        </div>
+    </div>
+
 </section>
 
 <section class="mbr-section mbr-section__container article" id="header3-e" data-rv-view="46" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
@@ -350,11 +417,149 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 lead"><p>Part I: LMP sensitivity on load variation</p><p>PJM 5 bus system</p></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 lead"><p>Generation Parameters</p>
+                      <table style="width:100%">
+                        <tr>
+                          <th>Gen. Name</th>
+                          <th>Alta($/MWhr)</th>
+                          <th>Park City</th>
+                          <th>Solitude</th>
+                          <th>Sundance</th>
+                          <th>Brighton</th>
+                        </tr>
+                        <tr>
+                          <th>Bus</th>
+                          <th>A</th>
+                          <th>A</th>
+                          <th>C</th>
+                          <th>D</th>
+                          <th>E</th>
+                        </tr>
+                        <tr>
+                          <th>Cost($/MWhr)</th>
+                          <th>14</th>
+                          <th>15</th>
+                          <th>30</th>
+                          <th>40</th>
+                          <th>10</th>
+                        </tr>
+                        <tr>
+                          <th>MW Limit</th>
+                          <th>40</th>
+                          <th>170</th>
+                          <th>520</th>
+                          <th>200</th>
+                          <th>600</th>
+                        </tr>
+                        <tr>
+                          <th>MVar Limit</th>
+                          <th>+-30</th>
+                          <th>+-127.5</th>
+                          <th>+-390</th>
+                          <th>+-150</th>
+                          <th>+-450</th>
+                        </tr>
+                      </table>
+                      <p>Load data</p>
+                      <table style="width:100%">
+                        <tr>
+                          <th>Bus</th>
+                          <th>A</th>
+                          <th>A</th>
+                          <th>C</th>
+                          <th>D</th>
+                          <th>E</th>
+                        </tr>
+
+                        <tr>
+                          <th>MW</th>
+                          <th>0</th>
+                          <th>300</th>
+                          <th>300</th>
+                          <th>400</th>
+                          <th>0</th>
+                        </tr>
+                        <tr>
+                          <th>MVar</th>
+                          <th>0</th>
+                          <th>98.61</th>
+                          <th>98.61</th>
+                          <th>131.47</th>
+                          <th>0</th>
+                        </tr>
+                      </table>
+                      <p>Line data</p>
+                      <table style="width:100%">
+                        <tr>
+                          <th>Line</th>
+                          <th>AB</th>
+                          <th>AD</th>
+                          <th>AE</th>
+                          <th>BC</th>
+                          <th>CD</th>
+                          <th>DE</th>
+                        </tr>
+
+                        <tr>
+                          <th>R(%)</th>
+                          <th>0.281</th>
+                          <th>0.304</th>
+                          <th>0.0064</th>
+                          <th>0.108</th>
+                          <th>0.297</th>
+                          <th>0.297</th>
+                        </tr>
+                        <tr>
+                          <th>X(%)</th>
+                          <th>2.81</th>
+                          <th>3.04</th>
+                          <th>0.64</th>
+                          <th>1.08</th>
+                          <th>2.97</th>
+                          <th>2.97</th>
+                        </tr>
+                        <tr>
+                          <th>B/2(%)</th>
+                          <th>3.56</th>
+                          <th>3.29</th>
+                          <th>15.63</th>
+                          <th>9.26</th>
+                          <th>3.37</th>
+                          <th>3.37</th>
+                        </tr>
+                        <tr>
+                          <th>Limit (MVA)</th>
+                          <th>400</th>
+                          <th>-</th>
+                          <th>-</th>
+                          <th>-</th>
+                          <th>-</th>
+                          <th>240</th>
+                        </tr>
+                      </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
 </section>
+<div>
+      <a href="https://plot.ly/~chaweewatp/127/?share_key=WcmgdMhP8HSXuZxsQGfhTt" target="_blank" title="PJM-5bus-network" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/127.png?share_key=WcmgdMhP8HSXuZxsQGfhTt" alt="PJM-5bus-network" style="max-width: 100%;width: 100px;"  width="100" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+      <script data-plotly="chaweewatp:127" sharekey-plotly="WcmgdMhP8HSXuZxsQGfhTt" src="https://plot.ly/embed.js" async></script>
+</div>
 
+<section class="mbr-section article mbr-section__container" id="content1-l" data-rv-view="245" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p>LMP at bus 2, 3 and 4 are differnced due to congestion between line A-B. The system marginal cost is 39.94 USD/MWhr</p></div>
+        </div>
+    </div>
+
+</section>
 <section class="mbr-section article mbr-section__container" id="content1-l" data-rv-view="50" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
@@ -482,6 +687,27 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 lead"><p>LMP announcement (table)</p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container article" id="header3-w" data-rv-view="102" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">Summary</h3>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section article mbr-section__container" id="content2-x" data-rv-view="104" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><blockquote>Make your own website in a few clicks! Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. MobiRise Website Builder creates responsive, retina and mobile friendly websites in a few clicks. Mobirise is one of the easiest website development tools available today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</blockquote></div>
         </div>
     </div>
 
@@ -622,7 +848,7 @@
   <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
-
+  <script src="latexit.js"></script>
 
   <input name="animation" type="hidden">
   </body>
