--- a/index3.html
+++ b/index3.html
@@ -566,7 +566,7 @@
         </div>
     </div>
 
-
+</section>
 <div>
     <a href="https://plot.ly/~chaweewatp/38/?share_key=OwDxMlbuczAHOOhK9aFdVm" target="_blank" title="5bus-PIPSvsHeuristic-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/38.png?share_key=OwDxMlbuczAHOOhK9aFdVm" alt="5bus-PIPSvsHeuristic-PIPS" style="max-width: 100%;width: 100px;"  width="100" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
     <script data-plotly="chaweewatp:38" sharekey-plotly="OwDxMlbuczAHOOhK9aFdVm" src="https://plot.ly/embed.js" async></script>
