--- a/index.html
+++ b/index.html
@@ -992,8 +992,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">Temp</h3>
-                <div class="lead"><p>Article header with background image and parallax effect.</p></div>
+                <h3 class="mbr-section-title display-2">End of presentation</h3>
+                <div class="lead"><p>Thank you for your attendtion</p></div>
+                <div class="lead"><p>All questions are welcome</p></div>
 
             </div>
         </div>
@@ -1001,7 +1002,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-r" data-rv-view="90" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<!-- <section class="mbr-section mbr-section__container article" id="header3-r" data-rv-view="90" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -1021,9 +1022,9 @@
         </div>
     </div>
 
-</section>
+</section> -->
 
-<section class="mbr-section article mbr-section__container" id="content1-o" data-rv-view="94" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<!-- <section class="mbr-section article mbr-section__container" id="content1-o" data-rv-view="94" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -1031,12 +1032,12 @@
         </div>
     </div>
 
-</section>
+</section> -->
 
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-q" data-rv-view="96" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
 
     <div class="container text-xs-center">
-        <p>ss</p>
+        <p>update 11st April, 2018</p>
     </div>
 </footer>
 
